ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
/* ... */
.gwtUI_ss_brightest   {opacity: 1.0;}
.gwtUI_ss_brightestIE {filter: alpha(opacity=100);}
.gwtUI_ss_brighter    {opacity: 0.8;}
.gwtUI_ss_brighterIE  {filter: alpha(opacity=80);}
.gwtUI_ss_bright      {opacity: 0.7;}
.gwtUI_ss_brightIE    {filter: alpha(opacity=70);}
.gwtUI_ss_dim         {opacity: 0.6;}
.gwtUI_ss_dimIE       {filter: alpha(opacity=60);}
.gwtUI_ss_very_dim    {opacity: 0.4;}
.gwtUI_ss_very_dimIE  {filter: alpha(opacity=40);}

/* Next and Previous Page buttons */

#viewNextPageOfResults, #viewPreviousPageOfResults, .viewNextDisabledImg, .viewPreviousDisabledImg {
	vertical-align: middle;
	}

/* Styles for the task disposition dialog. */
.taskDispositionDlg
{
}
.taskDispositionDlg_Radio
{
	margin-left: 5px;
}
.taskDispositionDlg_Grid
{
	margin-top: 8px;
}
.taskDispositionDlg_Label
{
	color: #414648; /* dark grey */
	line-height: 1.1em; 
	margin-right: 5px;
	padding: 0.2em 0.5em 0.3em; 
}
.taskDispositionDlg_Hint
{
	width: 400px;
	margin-top: 5px;
}
.taskDispositionDlg_TimePicker
{
	margin-left: 5px;
	margin-right: 3px;
}
.taskDispositionDlg_DateTimeTable td
{
	vertical-align: middle !important;
}

/* Styles for the task due date dialog. */
.taskDueDateDlg
{
}
.taskDueDateDlg_Table
{
	margin-top: 8px;
}
.taskDueDateDlg_Label
{
	color: #414648; /* dark grey */
	line-height: 1.1em; 
	margin-right: 5px;
	padding: 0.2em 0.5em 0.3em; 
}
.taskDueDateDlg_TaskTitle
{
	width: 400px;
	margin-top: 5px;
	font-weight: bold;
}

/* Start:  GWT Task Folder Listing styles. */
.gwtTaskFilter_div
{
	display: block;
	position: absolute;
	background-color: white;
	top: 5px;
	right: 5px;
	padding: 0px 5px 1px 5px;
	border: 1px solid #CCC;
	-moz-border-radius: 15px;
	-webkit-border-radius: 15px;
}
.gwtTaskFilter_toolbar
{
	position: relative;
}
.taskHierarchyDisabledDlg_VP
{
}
.taskHierarchyDisabledDlg_Label
{
	color: #414648; /* dark grey */
	line-height: 1.1em; 
	margin-right: 5px;
	padding: 0.2em 0.5em 0.3em; 
}
.taskHierarchyDisabledDlg_LI
{
}
.taskHierarchyDisabledDlg_UL
{
}
.gwtTaskTools
{
	background-color:#ededed;
	display: block;
	padding:  3px 3px 3px 12px;
	font-family: Arial,Helvetica,sans-serif;
	font-size: 1.25em;
	position: relative; 
	white-space: nowrap;
}
.gwtTaskTools_ButtonDIV
{
	padding-top:    2px;
	padding-bottom: 2px;
	vertical-align: middle;
}
.gwtTaskTools_LeftDIV
{
}
.gwtTaskTools_LinkageDIV
{
	vertical-align: middle;
}
.gwtTaskTools_WarningDIV
{
	padding-top:    2px;
	padding-bottom: 2px;
	vertical-align: middle;
}
.gwtTaskTools_WarningAnchor, .gwtTaskTools_WarningAnchor:visited
{
	font-size: .9em !important;
	color: #135c8f;
}
.gwtTaskTools_WarningAnchor:hover
{
	background: #cce9ee;
	-moz-border-radius: 3px;
	-webkit-border-radius: 3px;
}
.gwtTaskTools_Span
{
	padding-right: 10px;
}
.gwtTaskTools_Order
{
	font-size: 0.7em;
}
.gwtTaskTools_ViewMenuAnchor
{
	cursor: pointer;
}
.gwtTaskTools_ViewMenuDIV
{
	position: absolute;
	right: 5px;
	top: 5px;
}
.gwtTaskTools_ViewMenuSpan
{
	color: #333333;
	font-size: 0.6em;
	padding: 5px;
}
.gwtTaskToolsButton_WidgetAnchor
{
	background: none !important;
}
a.gwtTaskToolsButton_WidgetAnchor:hover
{
	background: none !important;
}
.gwtTaskToolsButton_WidgetImage
{
	margin-left: 3px;
	vertical-align: middle;
}
.gwtTaskToolsButton_WidgetText
{
	background:            none repeat scroll 0 0 #949494 !important;
	color:                 #FFFFFF                        !important;
	font-size:             .7em;
	padding:               2px 12px;
	text-decoration:       none;
	-moz-border-radius:    15px;
	-webkit-border-radius: 15px;
}
.gwtTaskToolsButton_WidgetTextDisabled
{
	background:            none repeat scroll 0 0 #B8B8B8 !important;
	color:                 #EDEDED                        !important;
}
.gwtTaskToolsButton_WidgetTextHover
{
	background:  #81B2BD url(images/slice_blend_teal_27.png) repeat-x !important;
	color:       #FFFFFF                                              !important;
}

.gwtTasks
{
	width: 100%;
}
.gwtTaskListing
{
	font-size: 1.35em; 
	overflow-y: auto;
	overflow-x: hidden;
	border: 1px solid #cccccc;
}
.gwtTaskListing_IE
{
		width: 99%;
}
.gwtTaskListing_NonIE
{
		width: 100%;
}
.gwtTaskList_assigneesList tr td
{
	border-bottom: 0px !important;
	font-size: 1.35em;
	padding: 0 !important;
	margin: 0 !important; 
}
.gwtTaskList_assignee
{
	display: inline;
	font-size: 1.25em;
	font-weight: bold;
	padding-left: 2px !important;
}
.gwtTaskList_assigneeEnabled
{
	color: #353838;
}
.gwtTaskList_assigneeDisabled
{
	color: #c4c4c4;
}
.gwtTaskList_assigneeHover
{
	color: #135c8f;
	cursor: pointer;
	background: url(images/blends/teal_slice.png) repeat-x;
	background-position:center;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
}
.gwtTaskList_calculatedDate
{
	font-style: italic;
}
.gwtTaskList_loading
{
	margin-top: 5px;
	margin-left: 5px;
	white-space: nowrap;
	display: inline-block;
}
.gwtTaskList_newTaskMenu_Link {
}
.gwtTaskList_popupGlass
{
	background-color: #000;
	filter: alpha(opacity=0);
	opacity: 0.0;
	z-index: 350;
}
.gwtTaskList_processActive
{
	font-size: 14px;
	background-color: #EBECA5;
	border-color: #BABDB6;
	border-style: solid solid solid;
	border-width: 1px;
	padding: 5px 10px;
	position: absolute;
	top: 50px;
	z-index: 100;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
}
.gwtTaskList_showGroupList
{
	display: block;
	font-size: 1.35em;
}
.gwtTaskList_showGroupListHidden
{
	visibility: hidden;
	display: none;
}
.gwtTaskList_showMoreMembersAnchor
{
	cursor: pointer;
	margin-left: 16px;
}
.gwtTaskList_sortImage
{
	vertical-align: middle;
}

/* Note that the following styles were copied from the prototype's hf_teaming.css stylesheet. */
.gwtTaskList_objlist2  /*   apply to the object list table tag <table class="objlist">  */ 
{ 
	background-color: #f6f6f6;
	border-bottom: 0px solid #f6f6f6;
	-moz-border-radius-bottomleft: 5px;
	-moz-border-radius-bottomright: 5px;
	-webkit-border-bottom-left-radius: 5px;
	-webkit-border-bottom-right-radius: 5px;
}
/* ... */

